fix: do not reset global terminations on phase level